crates/ros-z/tests/ui/message_derive/lifetime_generic.stderr
error: Message derive does not support lifetime parameters in v1
 --> tests/ui/message_derive/lifetime_generic.rs:5:24
  |
5 | struct LifetimeGeneric<'a> {
  |                        ^^
