crates/ros-z/tests/ui/message_derive/lifetime_generic.rs
use ros_z::Message;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize, Message)]
struct LifetimeGeneric<'a> {
    value: &'a str,
}

fn main() {}
